custom links added

--- a/index.html
+++ b/index.html
@@ -323,8 +323,8 @@ result.unsubscribe();
 						<div><a target="_blank" href="http://xgrommx.github.io/rx-book/">RxJS book</a></div>
 						<div><a target="_blank" href="http://rxmarbles.com/">Интерактивные marble-диаграммы</a></div><br>
 
-						<div><a target="_blank" href="#">Эта презентация</a></div>
-						<div><a target="_blank" href="#">RxJS explore</a></div>
+						<div><a target="_blank" href="http://7235200.github.io/rxjs-techtalk/#/">Эта презентация</a></div>
+						<div><a target="_blank" href="https://github.com/7235200/rx-ng2-explore">RxJS explore</a></div>
 					</div>
 
 				</section>
