async generators added

--- a/index.html
+++ b/index.html
@@ -70,13 +70,12 @@
 						<span class="fragment">UI events</span><br>
 						<span class="fragment">Requests</span><br>
 						<span class="fragment">Device events</span><br>
-						<span class="fragment">Messages</span><br>
 						<span class="fragment">Hooks</span><br><br>
 
 						<span class="fragment">Array</span><br>
 						<span class="fragment">Set</span><br>
 						<span class="fragment">Map</span><br>
-						<span class="fragment">Object</span><br>
+						<span class="fragment">String</span><br>
 						<span class="fragment">Everyting</span>
 					</div>
 					<div class="fragment">
@@ -88,15 +87,20 @@
 				<section>
 					<h4>Чем обрабатывать потоки?</h4><br>
 						<div class="layout-row">
-							<div class="flex-50">
+							<div class="flex-30">
+								<span class="fragment">EventEmitter</span><br>
 								<span class="fragment">callbacks</span><br>
 								<span class="fragment">promises</span><br>
 								<span class="fragment">generators</span><br>
-								<span class="fragment">async/await</span><br>
 								<span class="fragment">web workers</span><br>
 								<span class="fragment">web sockets</span><br>
 							</div>
-							<div class="layout-column layout-align-center">
+
+							<div class="layout-column layout-align-center flex-30">
+								<span class="fragment current-visible">async generators<br>async/await</span>
+							</div>
+
+							<div class="layout-column layout-align-center flex fragment">
 								<span class="fragment">
 									<p>RxJS</p>
 									<p>Reactive Extensions for Javascript</p>
