github url added

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					<h1>RxJS</h1>
 					<h4>Введение в реактивное программирование</h4>
 					<p>
-						<small>подготовил <a href="">Лазарев Дмитрий</a> / <a href="">dlazarev@ptsecurity.com</a></small>
+						<small>подготовил <a target="_blank" href="https://github.com/7235200">Лазарев Дмитрий</a> / <a href="">dlazarev@ptsecurity.com</a></small>
 					</p>
 				</section>
 
